--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,6 +392,7 @@ img {
     box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
     border-radius: 2rem;
     overflow: hidden;
+    position: relative;
 }
 
 .work__img img {
@@ -400,9 +401,31 @@ img {
     width: 100%;
 }
 
+.portfolio__link {
+    position: absolute;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .3);
+    border-radius: 2rem;
+    cursor: pointer;
+    backdrop-filter: blur(10px);
+    transition: 0.3s;
+
+}
+
 .work__img img:hover {
     transform: scale(1.2);
 }
+
+.work__img:hover .portfolio__link {
+    bottom: 0;
+}
+
+
 
 /* Contact */
 
