--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,7 +403,7 @@ img {
 
 
 .portfolio__link-name {
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     font-weight: 300;
 }
 
@@ -417,6 +417,7 @@ img {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, .3);
@@ -427,6 +428,9 @@ img {
 
 }
 
+.portfolio__link-info {
+    margin-bottom: 1.3rem;
+}
 
 .work__img:hover .portfolio__link {
     bottom: 0;
