--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,7 +390,7 @@ img {
 
 .work__img {
     box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
-    border-radius: 2rem;
+    border-radius: 1rem;
     overflow: hidden;
     position: relative;
 }
@@ -399,6 +399,10 @@ img {
     transition: 1s;
     cursor: pointer;
     width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
+    background-size: cover;
 }
 
 
